Init new layout (Jekyll)

--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 ---
 layout: default
-meta-title: Start Bootstrap
+meta-title: Kosmosmobile
 meta-description: Free open source Bootstrap themes and templates up to date for Bootstrap 4! An even faster way to develop websites in Bootstrap!
 ---
 
 <header class="marquee">
     <div class="container-fluid">
-        <div class="marquee-brand">Start Bootstrap</div>
-        <!-- Replace when guides go live! -->
-        <!-- <h1 class="marquee-heading">Free Bootstrap Themes, Templates, &amp; Guides</h1> -->
-        <h1 class="marquee-heading">Free Bootstrap Themes &amp; Templates</h1>
-        <ul class="list-inline">
-            <li><a href="/template-categories/all/" class="btn btn-secondary btn-lg">Browse All Themes &amp; Templates<div class="badge-new">New!</div></a></li>
-            <!-- <li><a href="#" class="btn btn-secondary btn-lg">Browse Guides &amp; Tutorials <span class="badge-new">New!</span></a></li> -->
-        </ul>
-        <a class="marquee-img" href="https://wrapbootstrap.com/?ref=StartBootstrap">
-            <img src="/img/wrapbootstrap.jpg" alt="">
+        <a class="marquee-img" href="https://itunes.apple.com/us/app/kosmos-mobile-free-call-and-text/id1011603314?ls=1&mt=8">
+            <img width="220"  src="/img/apple.svg" alt="">
+        </a>
+        <a class="marquee-img" href="https://play.google.com/store/apps/details?id=com.switch168.kosmos">
+            <img width="220"  src="/img/google.svg" alt="">
         </a>
     </div>
 </header>
@@ -24,90 +19,83 @@ meta-description: Free open source Bootstrap themes and templates up to date for
     <div class="container">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <h2>Forever free, open source, and easy to use.</h2>
+                <h2>Kosmos Free Call And Text</h2>
                 <!-- Replace when guides go live! -->
                 <!-- <p class="lead">Start Bootstrap is a collection of <strong>free to download Bootstrap themes and templates</strong>, and <strong>Bootstrap tutorials and guides</strong>. Our themes are open source and you can use them for any purpose, even comercially!</p> -->
-                <p class="lead">Start Bootstrap is a collection of <strong>free to download Bootstrap themes and templates</strong>. Our themes are open source and you can use them for any purpose, even comercially!</p>
+                <p class="lead">Kosmos lets you make FREE phone calls and text message to your friends. Kosmos messages can send photos, voice and video recordings and stickers to all of your friends and family – for FREE anywhere in the world.</p>
             </div>
         </div>
     </div>
 </section>
 
 <hr class="hr-home">
+<div class="content-section-a">
 
-<section class="themes">
-    <div class="container">
-        <div class="row">
-
-            {% for template in site.templates reversed %}
-            {% if template.categories contains 'featured' %}
-            <div class="col-lg-4 col-md-6 sb-preview text-center">
-                <div class="card h-100">
-                    <a class="sb-preview-img" href="{{ template.src }}">
-                        <img class="card-img-top img-fluid" src="{{ template.img-src }}" alt="{{ template.img-desc }}">
-                    </a>
-                    <div class="card-block">
-                        <h4 class="card-title">{{ template.title }}</h4>
-                        <p class="card-text">{{ template.bump }}</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="{{ template.src }}" class="btn btn-secondary">Preview &amp; Download</a>
-                    </div>
-                    {% if template.categories contains 'new' %}
-                    <div class="badge-new">New!</div>
-                    {% endif %}
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <p class="lead">Kosmos uses your wifi or phones data plan to make calls and send messages. Kosmos works on both iOS and Android devices – including iPad and Tablets. Kosmos lets users make calls to any landline and mobile phone numbers at very low rates – using Kosmos virtual currency.</p>
                 </div>
-            </div>
-            {% endif %}
-            {% endfor %}
-
-        </div>
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <a href="/template-categories/all/" class="btn btn-lg btn-primary">View All Themes &amp; Templates</a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<hr class="hr-home">
-
-<section class="premium">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <h2>Looking for something more?</h2>
-                <p class="lead">Try these premium themes from WrapBootstrap!</p>
-            </div>
-            {% for item in site.premium reversed %}
-            {% if item.categories contains 'featured' %}
-
-
-            <div class="col-lg-4 col-md-6 sb-preview text-center">
-                <div class="card h-100">
-                    <a class="sb-preview-img" href="{{ item.src }}">
-                        <img class="card-img-top img-fluid" src="{{ item.img-src }}" alt="{{ item.img-desc }}">
-                    </a>
-                    <div class="card-block">
-                        <h4 class="card-title">{{ item.title }}</h4>
-                        <p class="card-text">{{ item.bump }}</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="{{ item.src }}" class="btn btn-secondary">Preview &amp; Download</a>
-                    </div>
-                    {% if template.categories contains 'new' %}
-                    <div class="badge-new">New!</div>
-                    {% endif %}
+                <div class="col-lg-5 offset-lg-2 col-sm-6">
+                  <video video="" width="100%" height="100%" controls="">
+                    <source src="video/Kosmosvideo (1).mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                  </video>
                 </div>
             </div>
 
-            {% endif %}
-            {% endfor %}
         </div>
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <a href="/buy-bootstrap-templates/" class="btn btn-lg btn-primary">View More Premium Themes</a>
-            </div>                
-        </div>
+        <!-- /.container -->
+
     </div>
-</section>
+    <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img width="80%" class="img-fluid" src="img/profile.svg" alt="">
+                </div>
+
+                <div class="col-lg-5 offset-lg-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
+                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                </div>
+                           </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
+                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                </div>
+                <div class="col-lg-5 offset-lg-2 col-sm-6">
+                    <img class="img-fluid" src="img/phones.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+
