--- a/index.html
+++ b/index.html
@@ -3,99 +3,45 @@ layout: default
 meta-title: Kosmosmobile
 meta-description: Free open source Bootstrap themes and templates up to date for Bootstrap 4! An even faster way to develop websites in Bootstrap!
 ---
-
-<header class="marquee">
-    <div class="container-fluid">
-        <a class="marquee-img" href="https://itunes.apple.com/us/app/kosmos-mobile-free-call-and-text/id1011603314?ls=1&mt=8">
-            <img width="220"  src="/img/apple.svg" alt="">
-        </a>
-        <a class="marquee-img" href="https://play.google.com/store/apps/details?id=com.switch168.kosmos">
-            <img width="220"  src="/img/google.svg" alt="">
-        </a>
-    </div>
-</header>
-
-<section class="intro">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <h2>Kosmos Free Call And Text</h2>
-                <!-- Replace when guides go live! -->
-                <!-- <p class="lead">Start Bootstrap is a collection of <strong>free to download Bootstrap themes and templates</strong>, and <strong>Bootstrap tutorials and guides</strong>. Our themes are open source and you can use them for any purpose, even comercially!</p> -->
-                <p class="lead">Kosmos lets you make FREE phone calls and text message to your friends. Kosmos messages can send photos, voice and video recordings and stickers to all of your friends and family – for FREE anywhere in the world.</p>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-2">
+            <h3>Project One</h3>
+            <h4>Subheading</h4>
+            <p class="reg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
+        <div class="col-md-4">
+            <a href="#">
+                <img class="img-responsive" src="http://placehold.it/300x380" alt="">
+            </a>
+        </div>
+        
+        <div class="col-md-4">
+            <a href="#">
+                <img class="img-responsive" src="http://placehold.it/300x380" alt="">
+            </a>
+        </div>
+        <div class="col-md-2">
+            <h3>Project One</h3>
+            <h4>Subheading</h4>
+            <p class="reg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
-</section>
 
+    <hr class="hr-home">
+
+    <!-- /.row -->
+    <div class="row">
+        <div class="col-lg-6 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/400x380" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+        </div>
+        <div class="col-lg-6 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/400x380" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+        </div>
+    </div>
+</div>
 <hr class="hr-home">
-<div class="content-section-a">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <p class="lead">Kosmos uses your wifi or phones data plan to make calls and send messages. Kosmos works on both iOS and Android devices – including iPad and Tablets. Kosmos lets users make calls to any landline and mobile phone numbers at very low rates – using Kosmos virtual currency.</p>
-                </div>
-                <div class="col-lg-5 offset-lg-2 col-sm-6">
-                  <video video="" width="100%" height="100%" controls="">
-                    <source src="video/Kosmosvideo (1).mp4" type="video/mp4">
-                    <source src="movie.ogg" type="video/ogg">
-                    Your browser does not support the video tag.
-                  </video>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-    <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img width="80%" class="img-fluid" src="img/profile.svg" alt="">
-                </div>
-
-                <div class="col-lg-5 offset-lg-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
-                </div>
-                           </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 offset-lg-2 col-sm-6">
-                    <img class="img-fluid" src="img/phones.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-
