fixed rendering issues to ensure download links always visible

--- a/features.html
+++ b/features.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-meta-title: Kosmosmobile
-meta-description: Free open source Bootstrap themes and templates up to date for Bootstrap 4! An even faster way to develop websites in Bootstrap!
+meta-title: Kosmos Mobile
+meta-description: Kosmos Chat Features
 ---
 <header class="marquee" style="margin-bottom: 25px; height: 300px;"></header>
 <div class="container">
