--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-meta-title: Kosmosmobile
-meta-description: Free open source Bootstrap themes and templates up to date for Bootstrap 4! An even faster way to develop websites in Bootstrap!
+meta-title: Kosmos Mobile
+meta-description: Kosmos Mobile Home Page
 ---
 
 <header class="marquee" style="padding-bottom: 0px;">
@@ -9,7 +9,7 @@ meta-description: Free open source Bootstrap themes and templates up to date for
         <span class="marquee-img" href="https://itunes.apple.com/us/app/kosmos-mobile-free-call-and-text/id1011603314?ls=1&mt=8">
             <img class="cell" src="/img/home-phones/screen1.png" alt="">
         </span>
-        <span class="marquee-img hidden-sm-down" href="https://play.google.com/store/apps/details?id=com.switch168.kosmos">
+        <span class="marquee-img hidden-md-down" href="https://play.google.com/store/apps/details?id=com.switch168.kosmos">
             <img class="cell" src="/img/home-phones/screen2.png" alt="">
         </span>
     </div>
