--- a/eula.html
+++ b/eula.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-meta-title: Kosmosmobile
-meta-description: Free open source Bootstrap themes and templates up to date for Bootstrap 4! An even faster way to develop websites in Bootstrap!
+meta-title: Kosmos Mobile
+meta-description: Terms of Service
 ---
 <header class="marquee" style="padding-bottom: 0px; height: 300px;"></header>
 <br>
