--- a/template-categories/one-page.html
+++ b/template-categories/one-page.html
@@ -3,8 +3,8 @@ layout: template-category
 slug: one-page
 title: One Page Themes
 description: "A collection of one page website themes and templates built with Bootstrap 4."
-meta-title: "Free Bootstrap One Page Themes"
-meta-description: "Start Bootstrap's collection of free one page Bootstrap themes are easy to customize, free to download, and open source for any project, personal or commercial."
+meta-title: ""
+meta-description: ""
 redirect_from:
   - /one-page-templates/
   - /one-page-templates.php/
