display android or ios download button dependings on os

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ meta-description: Kosmos Mobile Home Page
         </span>
     </div>
 </header>
-
+<script src="/js/userAgent.js" type="text/javascript" charset="utf-8"></script>
 <section class="intro">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
                 <div class="container-fluid">
-                    <a class="marquee-img" href="https://itunes.apple.com/us/app/kosmos-mobile-free-call-and-text/id1011603314?ls=1&mt=8">
-                        <img style="margin-bottom: 40px; min-width: 180px;" src="/img/apple.svg" alt="">
+                    <a id="ios" style="display: none" class="marquee-img" href="https://itunes.apple.com/us/app/kosmos-mobile-free-call-and-text/id1011603314?ls=1&mt=8">
+                        <img style="margin-bottom: 20px; min-width: 180px;" src="/img/apple.svg" alt="">
                     </a>
-                    <a class="marquee-img" href="https://play.google.com/store/apps/details?id=com.switch168.kosmos">
-                        <img style="margin-bottom: 40px; min-width: 180px;" src="/img/google.svg" alt="">
+                    <a id="android" style="display: none" class="marquee-img" href="https://play.google.com/store/apps/details?id=com.switch168.kosmos">
+                        <img style="margin-bottom: 20px; min-width: 180px;" src="/img/google.svg" alt="">
                     </a>
                 </div>
                 <h2>Kosmos Free Call And Text</h2>
