touch up on eula, privacy and license documents

--- a/eula.html
+++ b/eula.html
@@ -5,11 +5,10 @@ meta-description: Terms of Service
 ---
 <header class="marquee" style="padding-bottom: 0px; height: 300px;"></header>
 <br>
-<div class="container eula">
-    <h2 style="color:#ffb800;">Terms of Service</h2>
+<div class="container document">
+    <h2 >Terms of Service</h2>
 
-
-    <h4 style="color:#333;">TABLE OF CONTENTS:</h4>
+    <h3 style="color:#333;">TABLE OF CONTENTS:</h3>
 
     <hr>
 
@@ -45,7 +44,7 @@ meta-description: Terms of Service
     </div>
 
 
-    <h3>PLEASE READ CAREFULLY BEFORE DOWNLOADING THE SOFTWARE OR USING THE PRODUCT(S) OR KOSMOS WEBSITES</h3>
+    <p>PLEASE READ CAREFULLY BEFORE DOWNLOADING THE SOFTWARE OR USING THE PRODUCT(S) OR KOSMOS WEBSITES</p>
 </div>
 
 
