--- a/privacy.html
+++ b/privacy.html
@@ -5,8 +5,8 @@ meta-description: Free open source Bootstrap themes and templates up to date for
 ---
 <header class="marquee" style="padding-bottom: 0px; height: 300px;"></header> 
 </br> 
-<div class="container privacy">
-    <h3>Kosmos Privacy Policy</h3>
+<div class="container document">
+    <h2>Kosmos Privacy Policy</h2>
     <br>
     <p>
         Kosmos Mobile, ("Kosmos" or "we" or "us" or "our" or other similar pronouns) takes your privacy matters very seriously. Please read the following to learn more about our Privacy Policy ("Policy"). This Policy details how we receive, collect and use information in connection with our website located at Kosmosmobile.com (the "Site"), the Kosmos software ("Kosmos App"), and other products and services provided on the Kosmosmobile.com website (all of the foregoing, collectively, the "Service").</p>
